# ROS2_Moveit2_WS

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/my_moveit_config/share/my_moveit_config/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: package.sh
install/my_robot_commander_cpp/lib/my_robot_commander_cpp/: robot_moveit
install/my_robot_commander_cpp/share/my_robot_commander_cpp/: package.sh  package.xml
log/: latest_build
src/.marscode/: deviceInfo.json
src/install/: local_setup.sh  setup.sh  setup.zsh
src/log/: latest_build  latest_list
src/my_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_moveit_config/config/: joint_limits.yaml  my_robot.srdf
src/my_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  warehouse_db.launch.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: my_robot.launch.xml
src/my_robot_bringup/log/: latest_list
src/my_robot_bringup/rviz/: my_robot_moveit.rviz
src/my_robot_commander_cpp/: CMakeLists.txt  package.xml
src/my_robot_commander_cpp/src/: robot_commander  robot_commander.cpp  robot_moveit.cpp
src/my_robot_commander_py/: setup.py
src/my_robot_commander_py/my_robot_commander_py/: robot_commander.py
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: arm.xacro  common_properties.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_moveit_config/: .setup_assistant  package.xml
src/my_robot_moveit_config/config/: joint_limits.yaml  my_robot.srdf
(+55 files in other folders)
